# tomasulo

./: .gitignore  CMakeLists.txt
data/: test1.nel  test3.nel  test4.nel
src/: main  main.cpp
src/core/: defs.h  instruction.h  parser.h  rs.h  tomasulo.cpp  tomasulo.h  utils.h
src/main/: main.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
